fix responsive of share links + same change for content name (text overflow ellipsis)

--- a/frontend/src/css/ContentItem.styl
+++ b/frontend/src/css/ContentItem.styl
@@ -10,11 +10,11 @@
     display flex
     align-items center
     flex 1
-    width 0 // INFO - CH - 2019-06-06 - this allows the text-overflow ellipsis
+    white-space nowrap
+    overflow hidden
+    text-overflow ellipsis
   &__name
     padding 5px
-    flex 1
-    width 0 // INFO - CH - 2019-07-04 - this allows the text-overflow ellipsis
     white-space nowrap
     overflow hidden
     text-overflow ellipsis
