--- a/frontend_lib/src/component/ShareLink/ShareLink.styl
+++ b/frontend_lib/src/component/ShareLink/ShareLink.styl
@@ -15,9 +15,14 @@
     &__unprotected
       margin-right 10px
   &__linkInfos
-    flex 1
-    width 0
     margin auto
+    text-overflow ellipsis
+    white-space nowrap
+    overflow hidden
+    &__email
+      white-space nowrap
+      overflow hidden
+      text-overflow ellipsis
     &__link
       font-size 14px
       color grey
